--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "types:generate": "openapi-typescript ../backend/src/extensions/documentation/documentation/1.0.0/full_documentation.json -o src/lib/types/strapi.d.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
@@ -17,14 +18,19 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
+    "openapi-fetch": "^0.9.5",
+    "openapi-typescript": "^6.7.5",
+    "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
