--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
