--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "types:generate": "openapi-typescript ../backend/src/extensions/documentation/documentation/1.0.0/full_documentation.json -o src/lib/types/strapi.d.ts"
+    "contentful-typescript-codegen": "contentful-typescript-codegen --output src/lib/types/contentful.d.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
@@ -16,6 +16,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "contentful": "^10.11.0",
+    "contentful-management": "^11.25.5",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "openapi-fetch": "^0.9.5",
@@ -34,12 +36,15 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "contentful-cli": "^3.3.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
