--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cf-content-types-generator": "^2.15.1",
     "contentful-cli": "^3.3.1",
     "dotenv": "^16.4.5",
     "eslint": "^8",
