--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@mantine/hooks": "^7.9.1",
+    "@portabletext/react": "^3.0.18",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/image-url": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "contentful": "^10.11.0",
     "contentful-management": "^11.25.5",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
+    "next-sanity": "^9.0.20",
     "openapi-fetch": "^0.9.5",
     "openapi-typescript": "^6.7.5",
     "qs": "^6.12.1",
