--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "contentful-typescript-codegen": "contentful-typescript-codegen --output src/lib/types/contentful.d.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
@@ -18,8 +17,6 @@
     "@sanity/image-url": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "contentful": "^10.11.0",
-    "contentful-management": "^11.25.5",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "next-sanity": "^9.0.20",
@@ -39,8 +36,6 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "cf-content-types-generator": "^2.15.1",
-    "contentful-cli": "^3.3.1",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
