--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,29 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "types:generate": "openapi-typescript ../backend/src/extensions/documentation/documentation/1.0.0/full_documentation.json -o src/lib/types/strapi.d.ts"
+    "types:generate": "openapi-typescript ../backend/src/extensions/documentation/documentation/1.0.0/full_documentation.json -o src/lib/types/strapi.d.ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@mantine/hooks": "^7.9.1",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-url-secret": "^1.6.21",
+    "@sanity/react-loader": "^1.10.7",
+    "@sanity/vision": "^3.57.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
+    "next-sanity": "^9.4.7",
     "openapi-fetch": "^0.9.5",
     "openapi-typescript": "^6.7.5",
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "sanity": "^3.57.3",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.3.0",
