Added contentful cms

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@sanity/vision": "^3.57.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "contentful": "^10.15.1",
+    "contentful-management": "^11.33.0",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "next-sanity": "^9.4.7",
@@ -41,6 +43,8 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cf-content-types-generator": "^2.15.5",
+    "contentful-cli": "^3.3.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
