--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@mantine/hooks": "^7.9.1",
+    "@payloadcms/db-postgres": "3.0.0-beta.36",
+    "@payloadcms/next": "3.0.0-beta.36",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.36",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@sanity/image-url": "^1.0.2",
@@ -28,6 +31,7 @@
     "next-sanity": "^9.4.7",
     "openapi-fetch": "^0.9.5",
     "openapi-typescript": "^6.7.5",
+    "payload": "3.0.0-beta.36",
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
