--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
     "@mantine/hooks": "^7.9.1",
     "@payloadcms/db-postgres": "3.0.0-beta.36",
     "@payloadcms/next": "3.0.0-beta.36",
@@ -26,7 +26,7 @@
     "clsx": "^2.1.1",
     "contentful": "^10.15.1",
     "contentful-management": "^11.33.0",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.5.4",
     "next": "14.2.3",
     "next-sanity": "^9.4.7",
     "openapi-fetch": "^0.9.5",
@@ -43,18 +43,19 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.5.5",
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "cf-content-types-generator": "^2.15.5",
     "contentful-cli": "^3.3.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2"
   }
 }
