--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "contentful-management": "^11.33.0",
     "framer-motion": "^11.5.4",
     "lenis": "^1.1.13",
+    "lucide-react": "^0.441.0",
     "next": "14.2.3",
     "next-sanity": "^9.4.7",
+    "next-themes": "^0.3.0",
     "openapi-fetch": "^0.9.5",
     "openapi-typescript": "^6.7.5",
     "payload": "3.0.0-beta.36",
@@ -39,6 +41,7 @@
     "sanity": "^3.57.3",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
